--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
 <body>
 <h1>McQueen</h1>
+  
 <button onclick="tocarSom('katchau')">katchau</button>
 <button onclick="tocarSom('dead-dance')">The Dead Dance</button>
-<audio id="katchau" src="sons/katchau.mp3"></audio>
+  
+<audio id="katchau" src="katchau.mp3"></audio>
 <audio id="dead-dance" src="sons/dead-dance.mp3"></audio>
+  
 <script src="script.js"></script>
 </body>
 </html>
